--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yaml": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
